--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
 /*=============== BASE ===============*/
 
 body {
-    background-image: url('your-background-pattern.png');
+    background-image: url('Pattern.jpg');
     background-repeat: repeat;
 }
 
